# agency

./: .gitignore  README.md  main.py  message_notification.jinja  pyproject.toml
examples/: main.py  researchers.py
src/agency/: __init__.py  _templates.py  agency.py  agent.py  tool.py
src/agency/templates/: agent_system.jinja  message_notification.jinja
