[project]
name = "agency"
version = "0.1.0"
description = "A minimal multi-agent orchestration framework built on the OpenAI chat completions API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.6", "openai>=2.16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agency"]

[dependency-groups]
dev = ["ruff>=0.9.0", "mypy>=1.15.0"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
packages = ["agency"]
strict = true
